fix form element font and alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -28,6 +28,13 @@ body {
   font-size: var(--page-font-size);
 }
 
+input,
+label,
+select {
+  font-family: inherit;
+  font-size: 1rem;
+}
+
 #page-preferences {
   display: grid;
   grid-gap: 16px;
